--- a/JavaWS/dataParser/.classpath
+++ b/JavaWS/dataParser/.classpath
@@ -6,5 +6,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="src/lib/jackson-databind-2.15.2.jar"/>
+	<classpathentry kind="lib" path="src/lib/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="src/lib/jackson-core-2.14.2.jar"/>
+	<classpathentry kind="lib" path="src/lib/jackson-annotations-2.14.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
