--- a/baseball/src/main/resources/application.yml
+++ b/baseball/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     allow-circular-references: true
   application:
     name: baseball
-    version: 1.0.0
+    version: 1.1.0
 
   datasource:
     url: jdbc:mysql://192.168.0.78:3306/testDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -32,3 +32,17 @@ server:
 mybatis:
   mapper-locations: classpath:/mappers/*.xml
   type-aliases-package: com.game.baseball.model
+
+file:
+  path: src/main/resources/py/json/todaysGames
+
+py:
+  paths:
+    mlb:
+      schedule: src/main/resources/py/getTodayMLBgame.py
+      result: src/main/resources/py/getCurMLBrslt.py
+    kbo:
+      schedule: src/main/resources/py/getTodayKBOgame.py
+      result: src/main/resources/py/getCurKBOrslt.py
+    gpt:
+      exepect: src/main/resources/py/getBaseBallRating.py
