--- a/baseball/pom.xml
+++ b/baseball/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>baseball</artifactId>
 	<version>1.2.1</version>
 	<name>baseball</name>
+	<packaging>war</packaging>
 	<description>springbootboard</description>
 	<properties>
 		<java.version>11</java.version>
@@ -91,6 +92,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.7.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
